tests/e2e/try_scope_invalid2.error
Error: syntax error in story at line 6, column 1

6|    b += 1
      ^

E0101: Variable `b` has not been defined.
