tests/e2e/try_scope_invalid2.story
try
  a = 0
catch
  b = 42

b += 1
